# Pieskieo

./: AGENTS.md  Cargo.toml  LICENSE  PLAN.md  PRODUCTION.md  README.md
.github/workflows/: release-binaries.yml
crates/pieskieo-cli/: Cargo.toml
crates/pieskieo-cli/src/: main.rs
crates/pieskieo-core/: Cargo.toml
crates/pieskieo-server/: Cargo.toml
crates/pieskieo-server/src/: lib.rs  main.rs
install/: get-pieskieo.ps1  get-pieskieo.sh  install.ps1  install.sh
plan/: PARITY_PLAN.md
plans/: PLANNING_SUMMARY.md
plans/core-features/: 01-unified-query-language.md  02-pql-parser.md  03-pql-executor.md  04-pql-optimizer.md  07-connection-pool.md  12-distributed-txn.md  14-repl.md  15-explain.md  16-result-streaming.md  17-plan-caching.md  18-cross-model-joins.md  19-graphql-api.md  20-query-timeouts.md  21-read-replicas.md  22-raft-consensus.md  23-vector-in-pql.md  24-graph-in-pql.md  25-orm-integration.md  26-auto-migration.md  27-rebalancing.md  28-monitoring.md
plans/kuzu/: 03-var-length-paths.md  09-property-indexes.md  11-shortest-path.md  14-betweenness.md  15-where-clause.md  16-optional-match.md  17-schema-evolution.md  18-connected-components.md  18-louvain-community.md  19-wcoj.md  20-csr-storage.md  21-label-propagation.md  22-load-csv.md  23-node-types.md  24-relationship-types.md  25-property-constraints.md  26-path-expressions.md  27-closeness-centrality.md  28-join-free-matching.md  29-batch-import.md  30-node-labels.md  31-schema-validation.md  32-graph-analytics.md  33-incremental-updates.md  34-temporal-graphs.md
plans/lancedb/: 02-arrow.md  09-pushdown.md  (+12 more)
(+92 files in other folders)
