[package]
name = "pieskieo-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
clap = { version = "4.5", features = ["derive", "env"] }
serde_json.workspace = true
uuid.workspace = true
pieskieo-core = { path = "../pieskieo-core" }
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
rustyline = "13"
serde.workspace = true
ctrlc = "3"
dirs.workspace = true
reqwest = { version = "0.11", features = ["blocking", "json"] }
rpassword = "7"

[[bin]]
name = "pieskieo"
path = "src/main.rs"

