[package]
name = "pieskieo-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
publish = false

[dependencies]
pieskieo-core = { path = "../pieskieo-core" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
axum.workspace = true
uuid.workspace = true
futures = "0.3"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
rand.workspace = true
sqlparser.workspace = true
base64 = "0.21"
argon2 = "0.5"
rand_core = "0.6"
tokio-stream = { version = "0.1", features = ["net"] }
tokio-rustls = "0.24"
rustls = "0.21"
rustls-pemfile = "1"
tower = { workspace = true, features = ["limit"] }
hyper = { version = "1", features = ["server", "http1", "http2"] }
